--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,12 @@
     android:background="@color/white"
     tools:context=".MainActivity">
 
+
     <FrameLayout
         android:id="@+id/fl_drawing_view_container"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="5dp"
+        android:layout_margin="0dp"
         android:padding="1dp"
         android:background="@color/white"
         app:layout_constraintBottom_toTopOf="@id/ll_paint_colors"
@@ -21,20 +22,29 @@
         app:layout_constraintTop_toTopOf="parent"
         >
 
+
+
         <ImageView
             android:id="@+id/iv_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/image"
             />
 
         <com.example.kidsdrawingapp.DrawingView
             android:id="@+id/drawing_view"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:background="#80FFFFFF"
-            />
+            android:layout_height="match_parent"
+            android:background="#80FFFFFF" />
+
+        <ImageButton
+            android:id="@+id/btnSave"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:background="@color/white"
+            android:contentDescription="save Button"
+            android:scaleType="fitXY"
+            android:src="@drawable/save2" />
 
     </FrameLayout>
 
@@ -89,7 +99,7 @@
             android:layout_height="35dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
-            android:tag="purple"
+            android:tag="#FF3700B3"
             android:background="@color/purple_700"
             android:onClick="paintClicked"
             />
@@ -109,8 +119,8 @@
             android:layout_height="35dp"
             android:layout_margin="2dp"
             android:src="@drawable/pallet_normal"
-            android:tag="white"
-            android:background="@color/white"
+            android:tag="#E716F6"
+            android:background="@color/pink"
             android:onClick="paintClicked"
             />
 
@@ -130,22 +140,34 @@
 
 
         <ImageButton
+            android:id="@+id/btnUndo"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_margin="3dp"
+            android:background="@color/white"
+            android:contentDescription="undo Button"
+            android:scaleType="fitXY"
+            android:src="@drawable/undo" />
+
+        <ImageButton
             android:id="@+id/btnEraser"
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_margin="3dp"
+            android:tag="white"
             android:src="@drawable/eraser"
             android:scaleType="fitXY"
             android:background="@color/white"
+            android:onClick="eraserClicked"
             android:contentDescription="Eraser Button"
         />
 
 
         <ImageButton
             android:id="@+id/ib_gallery"
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_margin="3dp"
             android:background="@color/white"
             android:scaleType="fitXY"
             android:src="@drawable/picture"
@@ -154,14 +176,26 @@
 
         <ImageButton
             android:id="@+id/ib_brush"
-            android:layout_width="55dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_margin="3dp"
             android:background="@color/white"
             android:contentDescription="brush size"
             android:scaleType="fitXY"
             android:src="@drawable/brush"
             />
+
+        <ImageButton
+            android:id="@+id/btnRedo"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:layout_margin="3dp"
+            android:src="@drawable/redo"
+            android:scaleType="fitXY"
+            android:background="@color/white"
+            android:contentDescription="redo Button"
+            />
+
     </LinearLayout>
 
 
