--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="yellow">#ffff00</color>
     <color name="lollipop"> #35a79c</color>
     <color name="random">#A349B1</color>
+    <color name="pink">#E716F6</color>
 </resources>
